--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,4 @@
 platform = espressif8266
 board = esp01_1m
 framework = arduino
-lib_deps = ArduinoJSON
+lib_deps = ArduinoJSON, Adafruit_LED_Backpack, Adafruit-GFX-Library, arduino-youtube-api
