update pio setup

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,20 @@
 ; http://docs.platformio.org/page/projectconf.html
 ; http://www.instructables.com/id/MAX7219-8-Digit-LED-Display-Module-Driver-for-ESP8/
 
-[env:esp01_1m]
+[platformio]
+env_default = nodemcuv2
+
+[env:nodemcuv2]
 platform = espressif8266
-board = esp01_1m
+board = nodemcuv2
 framework = arduino
-lib_deps = ArduinoJSON, Adafruit_LED_Backpack, Adafruit-GFX-Library, arduino-youtube-api
+lib_deps =
+  SPI,
+  Wire,
+  ArduinoJSON,
+  Adafruit_LED_Backpack,
+  Adafruit-GFX-Library,
+  arduino-youtube-api,
+  LedControl,
+  pgmspace
+board_flash_mode = qio
