--- a/platformio.ini
+++ b/platformio.ini
@@ -24,5 +24,5 @@ lib_deps =
   Adafruit-GFX-Library,
   arduino-youtube-api,
   LedControl,
-  pgmspace
-board_flash_mode = qio
+  EEPROM
+board_flash_mode = dio
